--- a/style.css
+++ b/style.css
@@ -10,12 +10,20 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     overflow: hidden;
     margin: 0;
 }
 
+/* .landing {
+    flex-direction: column;
+    min-height: 50vh;
+    width: 100vw;
+    background: url(/images/mountain.jpeg);
+    background-size: cover;
+} */
+
 .container {
+    height: 100vh;
     display: flex; /*this make element stack left to each other*/
     /*flex-direction: column; This set how flex would show*/
     width: 90vw; /*This help you control view of element */
